--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
         <button id="qrlinkbutton" type="button">Get QR</button>
       </div>
 
-      <div>
+      <div id="selectColors">
+        <div>
           <label for="qrColor1">Color 1: </label>
           <input id="qrColor1" type="color" value="#FFFFFF">
+        </div>
+        <div>
           <label for="qrColor2">Color 2: </label>
           <input id="qrColor2" type="color" value="#00B9E8">
+        </div>
       </div>
 
       <div>
