--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
     </div>
 
+    <div id="footer"></div>
+
     <script src="utility/QRCode/qrcode.min.js"></script>
     <script src="app/aqrGenerator.js"></script>
   </body>
